CRUD rutina Ok
